Issue #2188: Drop dragon shouldn't overlap content
Abstracted footer styles into it's own component
Better styles for footer

--- a/core/themes/basis/css/component/l-header.css
+++ b/core/themes/basis/css/component/l-header.css
@@ -135,7 +135,7 @@
 
 [dir="rtl"] .l-header .menu > li,
 [dir="rtl"] .header-menu li {
-  float: left;
+  float: right;
 }
 
 .l-header .menu a,
